metrics/kube-prometheus-stack/prometheus-httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
  - prometheus.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: kps-prometheus
      port: 9090
